# Cpp

./: 10-insert_values_using_map.cpp  11-college_mgmnt_system-using_map.cpp  14-encapsulation2.cpp  18-Static_variable_pgm1.cpp  19-static-variable-shared-all-objects.cpp  2-add_two_nums_using_objclass.cpp  20-static_variable_using_encapsulation.cpp  3-student_details_print_details.cpp  4-person_detail_increaseage.cpp  4-task.cpp  5-task5.cpp  6-task6.cpp  8-task_8.cpp  9-map_func.cpp  My_ref  mynewlib.cpp  mynewlib.h  readme
File_handling/Task1_data_store_text_file/: main_program.cpp  students.txt
File_handling/Task2_data_store_binary_format/: main.cpp
File_handling/Task3_data_stored_binary_using_staticFunction/: main.cpp
File_handling/Task4_data_stored_as_objects/: main.cpp  registers.txt
File_handling/Task5_data_stored_csv_format/: main.cpp  registers.csv
MySQL_Connection/Task1/: 23-Register_page_with_MySql.cpp  CMakeCache.txt  CMakeLists.txt
MySQL_Connection/Task2/: exercise_db.txt  (+1 more)
OOPS/: 1-basic_class_obj_pgm.cpp  12-using_constructor.cpp  13-constructor.cpp  14-encapsulation1.cpp  15-encapsulation2.cpp  16-encapsulation3.cpp  17-encapsulation4.cpp  22-Using_new_create_objects_using-class.cpp  24-addition_sub_using_polymorphism.cpp  5-add_names_string.cpp  7-string_name_modified_pgm.cpp  9-insert_names_using_map_func.cpp
Static_Library_1/: main.cpp  mylibrary.h  readme
Static_Library_2/: readme
Static_Library_3/: Student.h
Static_variable_Functions/: 21-Using_new_how_to_create_dynamic_variable.cpp
Task1_with_db/: exercise_db.txt  out
(+8 files in other folders)
